--- a/src/styles/mainpage.css
+++ b/src/styles/mainpage.css
@@ -7,14 +7,37 @@
   z-index: -1;
 }
 
+.mainpage {
+  width: 100%;
+  height: 100%;
+}
+
 .div-webname {
+  margin-top: 20px;
   width: 100%;
   font-family: "Fredoka";
   font-weight: 600;
-  font-size: 140px;
+  font-size: 130px;
   color: white;
-  line-height: 140px;
-  text-align: center;
+  line-height: 100px;
+}
+
+#p-webname {
+  position: fixed;
+  left: 320px;
+  animation: slide 1s ease-out 0s forwards;
+  margin: 0;
+}
+
+@keyframes slide {
+  from {
+    left: -100px;
+    opacity: 0;
+  }
+  to {
+    left: 320px;
+    opacity: 1;
+  }
 }
 
 #red {
@@ -25,12 +48,37 @@
   color: #3e85f9;
 }
 
+.dd {
+  margin-top: 100px;
+  color: white;
+  font-size: 100px;
+}
+
 .div-webexplain {
   width: 100%;
   font-family: "NanumGothic";
   font-weight: 600;
   font-size: 60px;
   color: white;
-  line-height: 150px;
-  text-align: center;
+  margin-top: 170px;
+}
+
+#p-webexplain {
+  margin: 0;
+  position: absolute;
+  top: 350px;
+  left: 450px;
+  animation: slide2 1s ease-in-out 0.8s forwards;
+  opacity: 0;
+}
+
+@keyframes slide2 {
+  from {
+    top: 400px;
+    opacity: 0;
+  }
+  to {
+    top: 350px;
+    opacity: 1;
+  }
 }
