--- a/src/styles/mainpage.css
+++ b/src/styles/mainpage.css
@@ -6,22 +6,13 @@
   z-index: -1;
 }
 
-.mainpage {
-  width: 100%;
-  height: 100%;
-}
-
-.div-webname {
-  margin-top: 20px;
-  width: 100%;
+#p-webname {
   font-family: "Fredoka";
   font-weight: 600;
   font-size: 130px;
   color: white;
-  line-height: 100px;
-}
 
-#p-webname {
+  display: inline-block;
   position: absolute;
   left: 320px;
   animation: slide 1s ease-out 0s forwards;
@@ -47,25 +38,15 @@
   color: #3e85f9;
 }
 
-.dd {
-  margin-top: 100px;
-  color: white;
-  font-size: 100px;
-}
-
-.div-webexplain {
-  width: 100%;
+#p-webexplain {
   font-family: "NanumGothic";
   font-weight: 600;
   font-size: 60px;
   color: white;
-  margin-top: 170px;
-}
 
-#p-webexplain {
   margin: 0;
   position: absolute;
-  top: 350px;
+  display: inline-block;
   left: 450px;
   animation: slide2 1s ease-in-out 0.8s forwards;
   opacity: 0;
@@ -77,7 +58,7 @@
     opacity: 0;
   }
   to {
-    top: 350px;
+    top: 360px;
     opacity: 1;
   }
 }
