--- a/src/styles/mapListPage.css
+++ b/src/styles/mapListPage.css
@@ -25,5 +25,15 @@ table td:first-child {
 }
 
 h1 {
-  color: black;
+  text-align: center;
+  margin-top: 20px;
+  padding-bottom: 10px;
+}
+
+.show-level {
+  text-align: center;
+  font-family: "NanumGothic";
+  font-weight: 400;
+  font-size: 50px;
+  margin-left: -30px;
 }
