--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Gafata&display=swap");
 
 /*
-font-family: "Nanum Gothic", sans-serif;
-font-family: 'Fredoka', sans-serif;
-font-family: 'Gafata', sans-serif;
+font-family: 'Nanum Gothic';
+font-family: 'Fredoka';
+font-family: 'Gafata';
 */
