--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,50 +1,53 @@
-.header {
+body {
+  margin: 0;
+}
+
+header {
+  position: fixed;
+  backdrop-filter: blur(10px);
+
   width: 100%;
-  height: 130px;
-  margin-top: 50px;
+  font-family: "Nanum Gothic";
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #192536;
+  padding: 5px;
+
+  z-index: 1;
 }
 
 .div-logo {
-  margin-left: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
 }
 
-#logo {
-  width: 90px;
-  height: 90px;
+.div-logo a {
+  font-family: "Gafata";
+  padding-left: 15px;
+  font-size: 30px;
 }
 
-.div-name {
-  font-family: "Gafata", sans-serif;
-  width: 190px;
-  height: 90px;
-  line-height: 44px;
-  text-align: center;
-  font-size: 40px;
-  color: white;
-}
-
-.div-map {
-  font-family: "NanumGothic";
-  font-weight: 400;
-  font-size: 50px;
-  line-height: 90px;
-  color: white;
-  margin-left: 700px;
-}
-
-.div-guide {
-  font-family: "NanumGothic";
-  font-weight: 400;
-  font-size: 50px;
-  line-height: 90px;
-  color: white;
-  margin-left: 100px;
+.div-logo img {
+  width: 50px;
+  height: 50px;
 }
 
 a {
-  text-decoration: none;
   color: white;
+  text-decoration: none;
+}
+
+.navbar-menu {
+  list-style: none;
+  display: flex;
+  padding-right: 37%;
+}
+
+.navbar-menu li {
+  font-size: 25px;
+  padding-right: 80px;
 }
 
 #name:hover {
