--- a/src/styles/mainpage.css
+++ b/src/styles/mainpage.css
@@ -7,16 +7,15 @@
 }
 
 #p-webname {
+  margin: 0;
   font-family: "Fredoka";
   font-weight: 600;
   font-size: 130px;
   color: white;
 
-  display: inline-block;
   position: absolute;
-  left: 320px;
+  top: 100px;
   animation: slide 1s ease-out 0s forwards;
-  margin: 0;
 }
 
 @keyframes slide {
@@ -44,21 +43,21 @@
   font-size: 60px;
   color: white;
 
-  margin: 0;
+  margin: 0 auto;
   position: absolute;
-  display: inline-block;
+  top: 280px;
   left: 450px;
-  animation: slide2 1s ease-in-out 0.8s forwards;
   opacity: 0;
+  animation: slide2 1s ease-in-out 0.8s forwards;
 }
 
 @keyframes slide2 {
   from {
-    top: 400px;
+    top: 350px;
     opacity: 0;
   }
   to {
-    top: 360px;
+    top: 280px;
     opacity: 1;
   }
 }
