--- a/src/styles/mapPage.css
+++ b/src/styles/mapPage.css
@@ -42,6 +42,7 @@
   font-weight: bold;
   font-family: "NanumGothic";
   color: #fff;
+  text-decoration: none;
   border: 2px solid white;
   font-size: 20px;
   line-height: 20px;
