--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,20 +3,14 @@ body {
 }
 
 .navbar {
-  position: fixed;
-  top: 0;
-
   width: 100%;
+  height: 70px;
 
   font-family: "Nanum Gothic";
 
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  background: #192536;
-  padding-right: 10px;
-  padding-left: 10px;
 }
 
 .navbar a {
@@ -27,7 +21,7 @@ body {
 .navbar-logo {
   display: flex;
   align-items: center;
-  padding: 5px 10px;
+  padding: 10px 20px;
 }
 
 .navbar-logo a {
@@ -37,21 +31,20 @@ body {
 }
 
 .navbar-logo img {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 45px;
 }
 
 .navbar-menu {
   list-style: none;
   display: flex;
   padding-left: 0px;
-  padding-right: 80px;
-  margin: 0;
+  padding-right: 110px;
 }
 
 .navbar-menu li {
   font-size: 25px;
-  padding: 5px 20px;
+  padding: 20px;
 }
 
 #name:hover {
@@ -79,39 +72,5 @@ body {
 
 .navbar-icon li {
   padding-left: 0;
-  padding: 5px 40px;
-}
-
-.navbar-toggleBtn {
-  position: absolute;
-  top: 18px;
-  right: 32px;
-  font-size: 24px;
-  display: none;
-}
-
-@media screen and (max-width: 768px) {
-  .navbar {
-    flex-direction: column;
-    align-items: start;
-  }
-  .navbar-menu {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-  }
-  .navbar-icon {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-  }
-  .navbar-toggleBtn {
-    display: block;
-  }
-  .navbar-menu.active,
-  .navbar-icon.active {
-    display: flex;
-  }
+  padding: 20px;
 }
