--- a/src/styles/mainpage.css
+++ b/src/styles/mainpage.css
@@ -7,6 +7,12 @@
   z-index: -1;
 }
 
+.main-header {
+  background-color: #192536;
+  width: 100%;
+  height: 70px;
+}
+
 .p-mainpage {
   text-align: center;
 }
