--- a/src/styles/mapPage.css
+++ b/src/styles/mapPage.css
@@ -1,10 +1,14 @@
-#map-background {
+#mapbackground {
   width: 100%;
   height: 800px;
   position: absolute;
-  top: 0;
-  left: 0;
   z-index: -1;
+}
+
+.map-header {
+  background-color: #1d1d1d;
+  width: 100%;
+  height: 70px;
 }
 
 .div-userLevel-explain {
