--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -19,32 +19,32 @@ body {
 }
 
 .navbar-logo {
-  display: flex;
+  width: 60px;
+  height: 60px;
   align-items: center;
-  padding: 10px 20px;
+  padding-left: 30px;
 }
 
 .navbar-logo a {
-  padding-left: 10px;
   font-family: "Gafata";
   font-size: 20px;
 }
 
 .navbar-logo img {
-  width: 40px;
-  height: 45px;
+  width: 60px;
+  height: 60px;
 }
 
 .navbar-menu {
   list-style: none;
   display: flex;
   padding-left: 0px;
-  padding-right: 110px;
+  padding-right: 20px;
 }
 
 .navbar-menu li {
   font-size: 25px;
-  padding: 20px;
+  padding: 0 30px;
 }
 
 #name:hover {
@@ -65,12 +65,17 @@ body {
   padding-left: 0px;
 }
 
-#btn-github {
+.navbar-icon button {
   background: none;
   border: none;
 }
 
+.navbar-icon img {
+  width: 55px;
+  height: 50px;
+}
+
 .navbar-icon li {
   padding-left: 0;
-  padding: 20px;
+  padding-right: 20px;
 }
