--- a/src/styles/mainPage/mainMake.css
+++ b/src/styles/mainPage/mainMake.css
@@ -1,18 +1,14 @@
 .compass {
   position: absolute;
   top: 220%;
-  left: 18%;
+  left: 19%;
   z-index: 1;
-}
-
-#compass {
-  width: 280px;
 }
 
 .compass-in {
   position: absolute;
-  top: 1680px;
-  left: 21%;
+  top: 232%;
+  left: 22%;
   transition: all ease 3s;
   z-index: 2;
 }
@@ -23,7 +19,7 @@
 
 #p-main2 {
   position: absolute;
-  top: 1550px;
+  top: 215%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
 
@@ -35,7 +31,7 @@
 
 .p-make {
   position: absolute;
-  top: 1660px;
+  top: 230%;
   left: 41.5%;
 
   font-family: "NanumGothic";
@@ -58,7 +54,7 @@
 
 .p-make-hidden {
   position: absolute;
-  top: 1660px;
+  top: 230%;
   left: 41.5%;
   opacity: 0;
 
