--- a/src/styles/mainPage/mainPage.css
+++ b/src/styles/mainPage/mainPage.css
@@ -1,15 +1,15 @@
 .main-header {
   width: 100%;
   height: 70px;
-  background-color: #222031;
+  background-color: #292637;
 }
 
-body {
+.main-background {
   background-image: url(/public/images/mainBackground.png);
-  height: 780px;
+  height: 920px;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: bottom;
 }
 
 #line1 {
