--- a/src/styles/mapPage.css
+++ b/src/styles/mapPage.css
@@ -1,29 +1,30 @@
-#mapbackground {
-  width: 100%;
-  height: 800px;
-  position: absolute;
-  z-index: -1;
-}
-
 .map-header {
-  background-color: #1d1d1d;
+  background-color: #1b1b1b;
   width: 100%;
   height: 70px;
+}
+
+.mapBackground1 {
+  background-image: url(/public/images/mapBackground.png);
+  height: 900px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .div-userLevel-explain {
   text-align: center;
   font-family: "NanumGothic";
-  font-size: 50px;
+  font-size: 60px;
   font-weight: 600;
-  padding-top: 140px;
+  padding-top: 90px;
   margin-bottom: 70px;
   color: #fff;
   text-shadow: 0 0 7px #fff, 0 0 42px #0fa;
 }
 
 .user-level {
-  margin-top: 20px;
+  padding-top: 20px;
   width: 1160px;
   list-style: none;
   margin-left: 30px;
@@ -32,7 +33,7 @@
 .user-level li {
   width: 100%;
   height: 60px;
-  padding-bottom: 40px;
+  padding-bottom: 45px;
   display: table;
   line-height: 30px;
   color: white;
@@ -40,29 +41,46 @@
 
 .user-level a {
   display: block;
-  width: 100px;
-  height: 20px;
+  width: 85px;
+  height: 18px;
   padding: 20px;
+  border: 2px solid white;
+  border-radius: 20px;
+
   font-weight: bold;
   font-family: "NanumGothic";
-  color: #fff;
-  text-decoration: none;
-  border: 2px solid white;
   font-size: 20px;
   line-height: 20px;
   text-align: center;
-  border-radius: 10px;
+  color: #fff;
+  text-decoration: none;
+
   background-color: dodgerblue;
-  margin-left: 230px;
+  margin-left: 240px;
+}
+
+#a1 {
+  background-color: #4d93fc;
+}
+#a2 {
+  background-color: #ffd700;
+}
+#a3 {
+  background-color: #ff4a4a;
+}
+#a4 {
+  background-color: #553830;
+}
+#a5 {
+  background-color: #3c3c3c;
 }
 
 .user-level a:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 .user-level div {
   font-family: "NanumGothic";
-  margin: 0;
   font-size: 20px;
   width: 720px;
   height: 60px;
