맵리스트 페이지 최종수정

--- a/src/styles/mapListPage.css
+++ b/src/styles/mapListPage.css
@@ -26,7 +26,7 @@ table {
   margin: 0 auto;
 }
 
-table td {
+td {
   height: 70px;
   border: 3px solid #fff;
   color: white;
@@ -34,15 +34,27 @@ table td {
   font-size: 26px;
 }
 
+td:nth-child(4) {
+  width: 35%;
+}
+
 #td-youtube {
   width: 15%;
 }
 
 #btn-workshop {
-  background-color: white;
-  font-size: 30px;
-  border-radius: 10px;
+  color: white;
   border: none;
+  width: 50px;
+  height: 50px;
+  font-size: 40px;
+  line-height: 30px;
+  border-radius: 40px;
+}
+
+#icon-workshop {
+  color: #1e3050;
+  text-align: center;
 }
 
 #btn-youtube {
@@ -52,13 +64,12 @@ table td {
   height: 45px;
   border: none;
   border-radius: 10px;
-  font-size: 20px;
-  line-height: 20px;
+  font-size: 25px;
+  line-height: 25px;
 }
 
 .off td {
-  background: #fff;
-  color: black;
+  color: #5bee6a;
 }
 
 input#check-map {
