--- a/src/styles/mapListPage.css
+++ b/src/styles/mapListPage.css
@@ -1,5 +1,5 @@
 .mapBackground2 {
-  background-image: url(/public/images/mapBackground.png);
+  background-image: url(/public/images/mapBackground.svg);
   height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
