--- a/src/styles/mapPage.css
+++ b/src/styles/mapPage.css
@@ -5,7 +5,7 @@
 }
 
 .mapBackground1 {
-  background-image: url(/public/images/mapBackground.png);
+  background-image: url(/public/images/mapBackground.svg);
   height: 900px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -25,9 +25,10 @@
 
 .user-level {
   padding-top: 20px;
-  width: 1160px;
+  padding-left: 0;
+  margin: 0 auto;
+  width: 60%;
   list-style: none;
-  margin-left: 30px;
 }
 
 .user-level li {
@@ -54,9 +55,7 @@
   text-align: center;
   color: #fff;
   text-decoration: none;
-
   background-color: dodgerblue;
-  margin-left: 240px;
 }
 
 #a1 {
@@ -86,4 +85,5 @@
   height: 60px;
   display: table-cell;
   vertical-align: middle;
+  margin-left: 10px;
 }
