--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -19,20 +19,14 @@ body {
 }
 
 .navbar-logo {
-  width: 60px;
-  height: 60px;
-  align-items: center;
-  padding-left: 30px;
+  padding-left: 20px;
+  list-style: none;
 }
 
-.navbar-logo a {
-  font-family: "Gafata";
-  font-size: 20px;
-}
-
-.navbar-logo img {
-  width: 60px;
-  height: 60px;
+.navbar-logo a svg {
+  padding-top: 5px;
+  width: 80px;
+  height: 35px;
 }
 
 .navbar-menu {
@@ -45,10 +39,6 @@ body {
 .navbar-menu li {
   font-size: 25px;
   padding: 0 30px;
-}
-
-#name:hover {
-  color: #ffd700;
 }
 
 #map:hover {
@@ -70,12 +60,11 @@ body {
   border: none;
 }
 
-.navbar-icon img {
-  width: 55px;
+.navbar svg {
+  width: 100px;
   height: 50px;
 }
 
 .navbar-icon li {
   padding-left: 0;
-  padding-right: 20px;
 }
