--- a/src/styles/mainPage/mainMake.css
+++ b/src/styles/mainPage/mainMake.css
@@ -1,14 +1,14 @@
 .compass {
   position: absolute;
-  top: 220%;
-  left: 19%;
+  top: 223%;
+  left: 20%;
   z-index: 1;
 }
 
 .compass-in {
   position: absolute;
-  top: 231%;
-  left: 21.7%;
+  top: 233.2%;
+  left: 22.8%;
   transition: all ease 3s;
   z-index: 2;
 }
@@ -19,25 +19,25 @@
 
 #p-main2 {
   position: absolute;
-  top: 215%;
+  top: 217%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
 
   font-family: "NanumGothic";
   font-weight: 800;
-  font-size: 70px;
+  font-size: 4rem;
   color: #f54f51;
 }
 
 .p-make {
   position: absolute;
   top: 230%;
-  left: 41.5%;
+  left: 42.2%;
 
   font-family: "NanumGothic";
   font-weight: lighter;
-  font-size: 28px;
-  line-height: 20px;
+  font-size: 1.75rem;
+  line-height: 1.25rem;
   animation: p-make 1s ease-out;
 }
 
@@ -48,7 +48,7 @@
   }
   to {
     opacity: 1;
-    left: 41.5%;
+    left: 43%;
   }
 }
 
