--- a/src/styles/mapPage.css
+++ b/src/styles/mapPage.css
@@ -15,7 +15,7 @@
 .div-userLevel-explain {
   text-align: center;
   font-family: "NanumGothic";
-  font-size: 60px;
+  font-size: 3.75rem;
   font-weight: 600;
   padding-top: 90px;
   margin-bottom: 70px;
@@ -27,7 +27,7 @@
   padding-top: 20px;
   padding-left: 0;
   margin: 0 auto;
-  width: 60%;
+  width: 900px;
   list-style: none;
 }
 
@@ -50,8 +50,8 @@
 
   font-weight: bold;
   font-family: "NanumGothic";
-  font-size: 20px;
-  line-height: 20px;
+  font-size: 1.25rem;
+  line-height: 1.25rem;
   text-align: center;
   color: #fff;
   text-decoration: none;
@@ -80,7 +80,7 @@
 
 .user-level div {
   font-family: "NanumGothic";
-  font-size: 20px;
+  font-size: 1.25rem;
   width: 720px;
   height: 60px;
   display: table-cell;
